# tangram

./: .doctr-files  .gitignore  .gitmodules  .travis.yml  AuxMeshTopology_8h.html  AuxMeshTopology_8h_source.html  CMakeLists.txt  CellMatPoly_8h.html  CellMatPoly_8h_source.html  LICENSE  MOF_8h.html  MOF_8h_source.html  MatPoly_8h.html  MatPoly_8h_source.html  Matrix_8h.html  Matrix_8h_source.html  Point_8h.html  Point_8h_source.html  README.md  SLIC_8h.html  SLIC_8h_source.html  VOF_8h.html  VOF_8h_source.html  Vector_8h.html  Vector_8h_source.html  advance__moments_8h.html  advance__moments_8h_source.html  annotated.html  bfgs_8h.html  bfgs_8h_source.html  classAuxMeshTopology_1_1h.html  classTangram_1_1AuxMeshTopology-members.html  classTangram_1_1AuxMeshTopology.html  classTangram_1_1CellMatPoly-members.html  classTangram_1_1CellMatPoly.html  classTangram_1_1ClipR2D-members.html  classTangram_1_1ClipR2D.html  classTangram_1_1ClipR3D-members.html  classTangram_1_1ClipR3D.html  classTangram_1_1CuttingDistanceSolver-members.html  (+241 more)
app/: CMakeLists.txt
app/apptest_cmp/: CMakeLists.txt  apptest_cmp.cc
app/apptest_cmp/test/: CMakeLists.txt  apptest_cmp.sh
app/demo-mof-app/: CMakeLists.txt  README.txt  demo-mof-app.cc  demo-mof-app2d.cc  demo-mof-app3d.cc
app/demo-mof-app3d/: CMakeLists.txt  demo-mof-app3d.cc
app/demo-slic-app/: CMakeLists.txt  README.txt  demo-slic-app.cc
app/demo-slic-app3d/: 3d_diamond_6x6x6_vfracs.txt  CMakeLists.txt  demo-slic-app3d.cc
app/demo-vof-app/: CMakeLists.txt  README.txt  demo-vof-app.cc  demo-vof-app2d.cc
app/demo-vof-app3d/: CMakeLists.txt  README.txt  demo-vof-app3d.cc  eye_20x20x10_vfracs.txt
app/demo-xmof-app/: CMakeLists.txt  demo-xmof-app.cc
app/demo-xmof-app/base_meshes/: voronoi_hus_hmax_0.005.exo  voronoi_hus_hmax_0.01.exo  voronoi_hus_hmax_0.02.exo  voronoi_hus_hmax_0.08.exo
app/demo_rotor3d/: CMakeLists.txt  demo_rotor.cc  demo_rotor_jali.cc  matdata_rotor3d.h
app/demoapp/: CMakeLists.txt  demoapp.cc  diamond_20x20_vfracs.txt  eye_20x20_vfracs.txt  plot.py
app/demoapp3d/: CMakeLists.txt  README.txt  demoapp3d  demoapp3d.cc  plot.py
app/demoapp3d/old/: 3ddiamondout.txt
app/include/: get_material_moments.h  read_material_data.h
app/multidef/: CMakeLists.txt  dummy.cc  main.cc  tangram_includes_to_check.h
app/rpgtools/: cuts.h  primitives.h
app/tangramapp/: CMakeLists.txt  tangramapp.cc
app/test_lvira/: CMakeLists.txt  test_lvira_2d.cc  test_lvira_3d.cc
app/test_lvira+/: CMakeLists.txt  test_lvira+_2d.cc  test_lvira+_3d.cc
app/test_lvira+/test/: CMakeLists.txt  cell_sym_diff_gold0_2d.txt  cell_sym_diff_gold0_3d.txt  cell_sym_diff_gold1_2d.txt  cell_sym_diff_gold1_3d.txt  cell_sym_diff_gold2_2d.txt  cell_sym_diff_gold2_3d.txt  cell_sym_diff_gold3_3d.txt  lvira+_2d_test0.sh  lvira+_2d_test1.sh  lvira+_2d_test2.sh  lvira+_3d_test0.sh  lvira+_3d_test1.sh  lvira+_3d_test2.sh  lvira+_3d_test3.sh
app/test_lvira/test/: CMakeLists.txt  cell_sym_diff_gold0_2d.txt  cell_sym_diff_gold0_3d.txt  cell_sym_diff_gold1_2d.txt  cell_sym_diff_gold1_3d.txt  cell_sym_diff_gold2_2d.txt  cell_sym_diff_gold2_3d.txt  cell_sym_diff_gold3_3d.txt  lvira_2d_test0.sh  lvira_2d_test1.sh  lvira_2d_test2.sh  lvira_3d_test0.sh  lvira_3d_test1.sh  lvira_3d_test2.sh  lvira_3d_test3.sh
app/test_mof/: CMakeLists.txt  test_mof_2d.cc  test_mof_2d_rz.cc  test_mof_3d.cc  test_single_cell_3d.cc
app/test_mof/test/: CMakeLists.txt  cell_sym_diff_gold0_2d.txt  cell_sym_diff_gold0_3d.txt  cell_sym_diff_gold0_3d_old.txt  cell_sym_diff_gold1_2d.txt  cell_sym_diff_gold1_2d_old.txt  cell_sym_diff_gold1_3d.txt  cell_sym_diff_gold1_3d_old.txt  cell_sym_diff_gold1_rz_2d.txt  cell_sym_diff_gold2_2d.txt  cell_sym_diff_gold2_2d_old.txt  cell_sym_diff_gold2_3d.txt  cell_sym_diff_gold2_3d_old.txt  cell_sym_diff_gold3_3d.txt  cell_sym_diff_gold3_3d_old.txt  cell_sym_diff_simple_mesh_3x5x7_decomposed.txt  cubic27.exo  mof_2d_test0.sh  mof_2d_test1.sh  mof_2d_test1_rz.sh  mof_2d_test2.sh  mof_3d_test0.sh  mof_3d_test1.sh  mof_3d_test2.sh  mof_3d_test3.sh  test_single_cell_3d.sh
app/test_mof_3d/: CMakeLists.txt  test_mof_3d.cc
app/test_mof_3d/test/: cell_sym_diff_gold0.txt  cell_sym_diff_gold1.txt  cell_sym_diff_gold2.txt  cell_sym_diff_gold3.txt  mof_3d_test0.sh  mof_3d_test1.sh  mof_3d_test2.sh  mof_3d_test3.sh  voronoi95.exo
app/test_slic/: CMakeLists.txt  test_slic_2d.cc  test_slic_3d.cc
app/test_slic/test/: CMakeLists.txt  cell_sym_diff_gold0_2d.txt  cell_sym_diff_gold0_2d_old.txt  cell_sym_diff_gold0_3d.txt  cell_sym_diff_gold1_2d.txt  cell_sym_diff_gold1_3d.txt  cell_sym_diff_gold2_2d.txt  cell_sym_diff_gold2_3d.txt  cell_sym_diff_gold3_3d.txt  slic_2d_test0.sh  slic_2d_test1.sh  slic_2d_test2.sh  slic_3d_test0.sh  slic_3d_test1.sh  slic_3d_test2.sh  slic_3d_test3.sh  voronoi124.exo
app/test_vof/: CMakeLists.txt  test_vof_2d.cc  test_vof_3d.cc
app/test_vof/test/: CMakeLists.txt  cell_sym_diff_gold0_2d.txt  cell_sym_diff_gold0_3d.txt  cell_sym_diff_gold0_3d_old.txt  cell_sym_diff_gold1_2d.txt  cell_sym_diff_gold1_3d.txt  cell_sym_diff_gold2_2d.txt  (+12 more)
app/test_xmof2d/: CMakeLists.txt  test_xmof2d.cc
app/vfgen/: CMakeLists.txt  vfgen-sampling-jali.cc  vfgen-sampling-sm.cc  vfgen-sampling.cc  vfgen.h
app/xmof-linetest-app/: CMakeLists.txt  xmof-linetest-app.cc
app/xmof-linetest-simplemesh-app/: CMakeLists.txt  xmof-linetest-simplemesh-app.cc
tangram/: CMakeLists.txt
tangram/driver/: CMakeLists.txt  CellMatPoly.h  driver.h  write_to_gmv.h
tangram/intersect/: CMakeLists.txt  r2d.c  r2d.h  r3d.c  r3d.h  split_r2d.h  split_r3d.h  split_rNd.h  split_rnd.h
tangram/reconstruct/: CMakeLists.txt  LVIRA.h  LVIRAPlus.h  MOF.h  SLIC.h  VOF.h  cutting_distance_solver.h  nested_dissections.h  xmof2D_wrapper.h
tangram/simple_mesh/: CMakeLists.txt  simple_mesh.h
tangram/support/: CMakeLists.txt  MatPoly.h  Matrix.h  Point.h  Vector.h  bfgs.h  lsfits.h  tangram.h
tangram/utility/: CMakeLists.txt  advance_moments.h  compute_r2d_moments.h  get_mat_sym_diff_vol.h  get_material_moments.h  read_material_data.h  rk4.h
tangram/wrappers/: CMakeLists.txt
(+226 files in other folders)
