#[[
 This file is part of the Ristra tangram project.
 Please see the license file at the root of this repository, or at:
 https://github.com/laristra/tangram/blob/master/LICENSE
]]

#-----------------------------------------------------------------------------~#

add_subdirectory(support)
add_subdirectory(intersect)
add_subdirectory(reconstruct)
add_subdirectory(driver)

